# smart-lights

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .markdownlint.yaml  CMakeLists.txt  LICENSE  README.md  changelog.md  cspell-words.txt
.github/ISSUE_TEMPLATE/: bug_report.md
components/core/cpputest/: CMakeLists.txt
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  pull_request_template.md
scripts/: run_test_host.sh
test/unit/host/: CMakeLists.txt  test_dummy.cpp
